--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,12 +1,12 @@
 <%- include('partials/header') %>
 
   <main>
-    <h1>Your Account</h1>
+    <h1>Сіздің аккаунтыңыз</h1>
     
     <div class="account-info">
-      <p><strong>Username:</strong> <%= user.username %></p>
+      <p><strong>Логин:</strong> <%= user.username %></p>
       <p><strong>Email:</strong> <%= user.email %></p>
-      <p><strong>Member since:</strong> <%= user.createdAt.toLocaleDateString() %></p>
+      <p><strong>Тіркелген күн:</strong> <%= user.createdAt.toLocaleDateString() %></p>
     </div>
   </main>
 
