--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,19 +1,19 @@
 <%- include('partials/header', {user: typeof user !== 'undefined' ? user : null}) %>
 
   <main>
-    <h1>Login</h1>
+    <h1>Кіру</h1>
     
     <% if (typeof error !== 'undefined' && error) { %>
       <p class="error"><%= error %></p>
     <% } %>
     
     <form action="/login" method="POST">
-      <input type="text" name="username" placeholder="Username" required>
-      <input type="password" name="password" placeholder="Password" required>
-      <button type="submit">Login</button>
+      <input type="text" name="username" placeholder="Логин" required>
+      <input type="password" name="password" placeholder="Құпия сөз" required>
+      <button type="submit">Кіру</button>
     </form>
     
-    <p>Don't have an account? <a href="/register">Register here</a></p>
+    <p>Аккаунтыңыз жоқ па? <a href="/register">Тіркеліңіз</a></p>
   </main>
 
 <%- include('partials/footer') %>
