--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,20 +1,20 @@
 <%- include('partials/header', {user: typeof user !== 'undefined' ? user : null}) %>
 
   <main>
-    <h1>Register</h1>
+    <h1>Тіркелу</h1>
     
     <% if (typeof error !== 'undefined' && error) { %>
       <p class="error"><%= error %></p>
     <% } %>
     
     <form action="/register" method="POST">
-      <input type="text" name="username" placeholder="Username" required>
+      <input type="text" name="username" placeholder="Логин" required>
       <input type="email" name="email" placeholder="Email" required>
-      <input type="password" name="password" placeholder="Password" required>
-      <button type="submit">Register</button>
+      <input type="password" name="password" placeholder="Құпия сөз" required>
+      <button type="submit">Тіркелу</button>
     </form>
     
-    <p>Already have an account? <a href="/login">Login here</a></p>
+    <p>Аккаунтыңыз бар ма? <a href="/login">Аккаунтқа кіру</a></p>
   </main>
 
 <%- include('partials/footer') %>
