--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -17,7 +17,7 @@
     <button type="submit">Пікірді жүктеу</button>
   </form>
 <% } else { %>
-  <p class="login-prompt">Пікір қалдыру үшін <a href="/login">тіркелу</a> қажет.</p>
+  <p class="login-prompt">Пікір қалдыру үшін <a href="/login">аккаунтқа кіру</a> қажет.</p>
 <% } %>
 
 <%
