--- a/views/searchResults.ejs
+++ b/views/searchResults.ejs
@@ -1,7 +1,7 @@
-<h2>Результаты поиска для "<%= query %>"</h2>
+<h2>Іздеу нәтижесі "<%= query %>"</h2>
 
 <% if (words.length === 0) { %>
-  <p>Ничего не найдено.</p>
+  <p>Ештеңе табылмады.</p>
 <% } else { %>
   <ul>
     <% words.forEach(word => { %>
