--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,12 +9,13 @@
 <body>
   <header>
     <nav>
-      <div class="logo">SignDict</div>
+     <div class="logo"><img src="/css/logo.png" alt="Logo"></div>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/categories">Categories</a></li>
-        <li><a href="/tasks">Tasks</a></li>
-        <li><a href="/forum">Forum</a></li>
+        <li><a href="/">Басты бет</a></li>
+        <li><a href="/categories">Категориялар</a></li>
+        <li><a href="/map">Карта</a></li>
+        <li><a href="/tasks">Жаттығу</a></li>
+        <li><a href="/forum">Форум</a></li>
       </ul>
       <div class="auth">
   <% if (typeof user !== 'undefined' && user) { %>
