--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,8 +8,8 @@
 
 body {
   line-height: 1.6;
-  color: #333;
-  background-color: #f5f5f5;
+  color: #002137;
+   background-color: #FFF9E6;
 }
 
 /* Header & Navigation */
@@ -17,20 +17,26 @@ header {
   background-color: #2c3e50;
   color: white;
   padding: 1rem 0;
+  background-image: url('header.png'); /* Укажите путь к вашему изображению */
+  background-size: cover; /* Это свойство позволяет изображению покрывать весь элемент */
+  background-position: center; /* Центрирует изображение */
 }
 
 nav {
+  font-weight: bold;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 2rem;
-  background-color: #2c3e50;
 }
 
-nav .logo {
-  font-weight: bold;
-  font-size: 1.2rem;
+nav .logo img {
+  height: 50px; 
+  width: auto;
+  display: block; 
 }
+
+
 
 nav ul {
   list-style: none;
@@ -41,9 +47,15 @@ nav ul {
 }
 
 nav ul li a {
+  font-weight: bold;
   text-decoration: none;
   color: #fff;
-  font-weight: 500;
+  font-size: 1rem;
+  transition: color 0.4s ease, font-size 0.4s ease
+}
+nav ul :hover{
+  color: #FFDA00;
+  font-size: 1.2rem
 }
 
 nav .auth {
@@ -224,7 +236,7 @@ main {
 
 .comment-form button {
   padding: 0.5rem 1rem;
-  background-color: #3498db;
+  background-color: #002137;
   color: white;
   border: none;
   border-radius: 4px;
@@ -247,8 +259,9 @@ main {
   border-radius: 8px;
   padding: 1rem;
   margin-bottom: 1rem;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
   position: relative;
+  border: 1px solid #ddd;
 }
 
 .admin-comment {
@@ -388,7 +401,9 @@ button {
 footer {
   text-align: center;
   padding: 1rem 0;
-  background-color: #2c3e50;
+  background-image: url('header.png'); /* Укажите путь к вашему изображению */
+  background-size: cover; /* Это свойство позволяет изображению покрывать весь элемент */
+  background-position: center;
   color: white;
   margin-top: 2rem;
 }
