--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -5,7 +5,7 @@
     
     <div class="categories-grid">
       <% categories.forEach(category => { %>
-  <a href="/category/<%= category._id %>" class="category-card">
+  <a href="/category/<%= category._id %>" class="category-card" style="background-image: url('<%= category.imagePath %>');">
     <h2><%= category.name %></h2>
     <div class="video-count">
       <%= category.videos.length %> videos
