--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kk">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,49 +29,4 @@
   <% } %>
 </div>
     </nav>
-    <style>
-        .modal {
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.8);
-}
-
-.modal-content {
-  background-color: #fff;
-  margin: 5% auto;
-  padding: 20px;
-  border-radius: 8px;
-  width: 80%;
-  max-width: 800px;
-  position: relative;
-}
-
-.close-modal {
-  position: absolute;
-  right: 20px;
-  top: 10px;
-  color: #b01d1d;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.close-modal:hover {
-  color: #333;
-}
-
-#modalVideo {
-  width: 100%;
-  margin-top: 15px;
-}
-
-#modalVideoTitle {
-  margin-top: 15px;
-}
-    </style>
   </header>
